Fix checkboxes not aligning with label

--- a/examples/html/style.css
+++ b/examples/html/style.css
@@ -194,6 +194,10 @@ input:disabled, textarea:disabled {
     color: rgb(160, 160, 160);
 }
 
+#properties-list input[type=checkbox] {
+    vertical-align: bottom;
+}
+
 #properties-list input[type=button] {
     cursor: pointer;
     background-color: rgb(51, 102, 102);
